Remove unused code from OST
