# app/controllers/api/v1/projects_controller.rb
@@ -36,8 +36,4 @@ class Api::V1::ProjectsController < Api::V1::ApplicationController
   def packages
     @projects = Project.all.active.select{|p| p.packages.present? }.sort_by{|p| p.packages.sum{|p| p['downloads'] || 0 } }.reverse
   end
-
-  def images
-    @projects = Project.all.with_readme.select{|p| p.readme_image_urls.present? }
-  end
 end
